footer -need styles refactor

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -1,8 +1,7 @@
 .mainFooter {
-  position:absolute;
+  position:absolute!important;
   bottom:0;
   width:100%;
-  height:60px;   /* Height of the footer */
   background:#cbd3d7;
   z-index: 10;
 }
